minio/11-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-headless
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: storage
spec:
  clusterIP: None
  ports:
    - name: api
      port: 9000
      protocol: TCP
    - name: console
      port: 9001
      protocol: TCP
  selector:
    app.kubernetes.io/name: minio
