minio/12-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: storage
spec:
  ports:
    - name: api
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: console
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app.kubernetes.io/name: minio
