minio/20-minio-console-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio
spec:
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: console
      port: 9001
      targetPort: 9001
