minio/21-minio-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-operator
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: local-ca
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts: ["minio.home.arpa"]
    secretName: minio-tls
  rules:
  - host: minio.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-console
            port:
              number: 9090
